# data-classification

./: .gitignore  Cargo.toml  README.md  TODO.md  mutate.ps1
data-classification/: Cargo.toml
data-classification-macros/: Cargo.toml
data-classification-macros/src/: lib.rs
data-classification/src/: asterisk_redactor.rs  asterisk_redactor_maker.rs  builtin_wrappers.rs  class_id.rs  classified.rs  classified_accessor.rs  classified_data_wrapper.rs  data_class.rs  data_class_macro.rs  data_class_struct.rs  erasing_redactor.rs  erasing_redactor_maker.rs  extract.rs  extractor.rs  lib.rs  nop_redactor.rs  nop_redactor_maker.rs  redact.rs  redaction_engine.rs  redaction_engine_builder.rs  redaction_sink.rs  redactor.rs  redactor_maker.rs  sensitive.rs  xxh3_redactor.rs  xxh3_redactor_maker.rs
data-classification/src/core_taxonomy/: mod.rs
data-privacy/: Cargo.toml
data-privacy-macros/: Cargo.toml
data-privacy-macros/src/: lib.rs
data-privacy-macros/src/snapshots/: data_privacy_macros__tests__success.snap
data-privacy/examples/employees/: employee.rs  example_taxonomy.rs  logging.rs  main.rs
data-privacy/src/: classified.rs  lib.rs  redaction_engine.rs  redaction_engine_builder.rs  redactor.rs  simple_redactor.rs  xxh3_redactor.rs
data-privacy/src/core_taxonomy/: mod.rs
data-redaction/: Cargo.toml
data-redaction/examples/employees/: employee.rs  example_taxonomy.rs  logging.rs  main.rs
data-redaction/src/: lib.rs  redaction_engine.rs  redaction_engine_builder.rs  simple_redactor.rs  xxh3_redactor.rs
redaction/: Cargo.toml
redaction/src/: asterisk_redactor.rs  erasing_redactor.rs  lib.rs  nop_redactor.rs  redaction_engine.rs  redaction_engine_builder.rs  redactor.rs  simple_redactor.rs  xxh3_redactor.rs
