[package]
name = "data-classification"
description = "Data annotation system providing a robust way to manipulate sensitive information."
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
resolver = "2"

[dependencies]
xxhash-rust = { version = "0.8.12", optional = true, features = ["xxh3"] }
serde = { version = "1.0.219", optional = true, default-features = false }

[features]
default = ["xxh3"]
xxh3 = ["dep:xxhash-rust"]
serde = ["dep:serde"]

[lints]
workspace = true
