[package]
name = "data-privacy"
description = "Data annotation and redaction system providing a robust way to manipulate sensitive information."
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
data-privacy-macros = { path = "../data-privacy-macros" }
mutants = { version = "0.0.3" }
serde = { version = "1.0.219", optional = true, default-features = false, features = ["derive", "std"] }
xxhash-rust = { version = "0.8.15", optional = true, features = ["xxh3"] }

[dev-dependencies]
once_cell = "1.21.3"
serde = {  version = "1.0.219", features = ["derive", "std"] }
serde_json = "1.0.140"

[features]
default = ["serde", "xxh3"]
serde = ["dep:serde"]
xxh3 = ["dep:xxhash-rust"]

[lints]
workspace = true

[[example]]
name = "employees"
path = "examples/employees/main.rs"
