[package]
name = "data_redaction"
description = "General-purpose data redaction for compliant telemetry."
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
xxhash-rust = { version = "0.8.15", optional = true, features = ["xxh3"] }
data-classification = { version = "0.1.0", path = "../data-classification", default-features = false }
mutants = { version = "0.0.3" }

[features]
default = ["xxh3"]
xxh3 = ["dep:xxhash-rust"]

[lints]
workspace = true
