[package]
name = "redaction"
description = "General-purpose data redaction for compliant telemetry."
readme.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
resolver = "2"

[dependencies]
xxhash-rust = { version = "0.8.12", optional = true, features = ["xxh3"] }
data-classification = { version = "0.1.0", path = "../data-classification", default-features = false }

[features]
default = ["xxh3"]
xxh3 = ["dep:xxhash-rust"]

[lints]
workspace = true
